# WhimsyDataStructs

./: .gitignore  CMakeLists.txt  ChannelField.cpp  ChannelField.h  Doxyfile  README.md  a.out  test.cpp  whimsybase.cpp  whimsybase.h  whimsychannel.h  whimsychannelfield.cpp  whimsychannelfield.h  whimsycore.h  whimsyexception.cpp  whimsyexception.h  whimsynote.cpp  whimsynote.h  whimsyvariant.cpp  whimsyvariant.h
Test01/: CMakeLists.txt  test.cpp  whimsychannel.cpp  whimsychannel.h  whimsychannelfield.cpp  whimsychannelfield.h  whimsyvariant.cpp  whimsyvariant.h
Test01/Test01/: Test01.pro
Test01/build-Test01-Desktop-Debug/: Makefile  Test01
Test01/build-Test01-Desktop-Release/: Makefile  Test01  callgrind.out.21623  callgrind.out.21659  callgrind.out.21688  callgrind.out.21715  callgrind.out.21741  callgrind.out.21743
Test02/: CMakeLists.txt  README.md  test.cpp  whimsycore.h  whimsyexception.h  whimsynote.h  whimsysystem.h  whimsyvariant.h
Test02/core/: whimsybase.h  whimsyexception.cpp  whimsyexception.h  whimsynote.h  whimsytable.cpp  whimsytable.h  whimsytypedtable.cpp  whimsyvariant.cpp  whimsyvariant.h  whimsyvector.h
Test02/system/: whimsysystemstructs.cpp  whimsysystemstructs.h
Test03/: CMakeLists.txt  test.cpp  whimsycore.h  whimsyio.h
Test03/core/: whimsyabstractsong.cpp  whimsyabstractsong.h  whimsybase.h  whimsybytestream.cpp  whimsybytestream.h  whimsyexception.cpp  whimsyexception.h  whimsymappedsong.h  whimsypatterntable.cpp  whimsypatterntable.h  whimsypatterntable.h.autosave  whimsysequencedsong.cpp  whimsysequencedsong.h  whimsysystemprofile.cpp  whimsysystemprofile.h  whimsytypedtable.h  whimsyvariant.cpp  whimsyvariant.h  whimsyvector.h
Test03/core/not-included/: whimsymappedsong.cpp  whimsysequencedsong.cpp  whimsysequencedsong.h
Test03/io/: Midi specs.ods  whimsymidiio.cpp  whimsymidiio.h  whimsymidiio.h.autosave
Test03/sample_files/: music1.wst  music1.xml
Test03/system_presets/: midi_general.xml  preset_midi.xml
Test04/: CMakeLists.txt  test04.cpp  whimsycore.h
Test04/core/: whimsybytestream.cpp  whimsybytestream.h  whimsyexception.cpp  whimsyparser.cpp  whimsyparser.h  whimsytree.cpp  whimsytree.h  whimsyvariant.cpp  whimsyvariant.h  whimsyvector.h
Test04/export_files/: music1-compressed.wst  music1-nowhitespaces.json  music1.json  nes_2a03-compressed.wsp  nes_2a03-nowhitespaces.json  nes_2a03.json
Test05/: CMakeLists.txt  test05.cpp
Test05/core/: whimsyexception.h  whimsyvariant.cpp  whimsyvariant.h
docs/: .~lock.Formats.ods#  Formats.ods
